# foto_para_desenho

./: pyproject.toml
foto_para_desenho/: foto_para_desenho.py
